# argus

./: .argus.yml  .coverage  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  ci-integration.html  configuration.html  index.html  installation.html  opencode.json  platforms.html  pyproject.toml  quick-start.html  sitemap.xml  upgrade.html
.claude/rules/: documentation-standards.md  error-handling.md  tdd.md  testcontainers.md  type-safety.md
.claude/skills/atomic-commit/: SKILL.md
.claude/skills/code-quality/: SKILL.md
.claude/skills/dependency-injection/: SKILL.md
.claude/skills/design-patterns/: SKILL.md
.claude/skills/documentation-standards/: SKILL.md
.claude/skills/error-handling/: SKILL.md
.claude/skills/pre-commit/: SKILL.md
.claude/skills/refactoring/: SKILL.md
.claude/skills/solid/: SKILL.md
.claude/skills/tdd/: SKILL.md
.claude/skills/testcontainers/: SKILL.md
.claude/skills/testing-strategy/: SKILL.md
.claude/skills/type-safety/: SKILL.md
.cursor/rules/: atomic-commit.md  design-patterns.md  pre-commit.md  solid.md  testing-strategy.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml
.opencode/commands/: atomic-commit.md  code-quality.md  dependency-injection.md  design-patterns.md  documentation-standards.md  error-handling.md  pre-commit.md  refactoring.md  solid.md  tdd.md  testcontainers.md  testing-strategy.md  type-safety.md
.opencode/skills/code-quality/: SKILL.md
.opencode/skills/dependency-injection/: SKILL.md
.opencode/skills/error-handling/: SKILL.md
.opencode/skills/refactoring/: SKILL.md
.opencode/skills/type-safety/: SKILL.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/18-gemini-cli-adapter/: 18-01-PLAN.md  18-01-SUMMARY.md  18-02-PLAN.md  18-02-SUMMARY.md  18-RESEARCH.md  18-VALIDATION.md  18-VERIFICATION.md
argus/: __init__.py  cli.py  config.py  generator.py  loader.py
argus/adapters/: base.py  claude.py  copilot.py  cursor.py  gemini.py  opencode.py
argus/packs/atomic-commit/: checklist.md  (+3 more)
assets/css/: styles.b17cb05e.css
assets/js/: 0e384e19.59c516a2.js  0e384e19.a7b69025.js  1605ae40.23079cbe.js  1a7362f6.c2967b10.js  25229ed6.08082a1d.js  25229ed6.ff88bea8.js  25922ef9.2b08f1d4.js  290f4f78.0d128c65.js  290f4f78.36e59f55.js  290f4f78.3f7e6e89.js  3116fd96.8481c8e5.js  394e6d21.ce72cad2.js  3b8c55ea.6f76abe8.js  3b8c55ea.96e7c8d3.js  44234b90.4b4f9ab3.js  44234b90.71a23217.js  46e0da5d.a4adc64a.js  49e91c60.dde84551.js  4b66788a.915fcb84.js  4c8ac578.3b20b450.js  4c8ac578.4a3ef459.js  652fd27e.eab074de.js  721cf1c5.83bf9650.js  721cf1c5.e4d36176.js  72d0736b.69ca96cb.js  72e14192.8d7bf982.js  72e14192.9cfed549.js  8cdab7cd.5565072b.js  8f7cc773.89bf70bb.js  9ad93800.f620739f.js  9ed00105.29692750.js  9ed00105.c9347fc9.js  a4cf13d9.d4f7ab39.js  a8ddddfb.15a9a058.js  a8ddddfb.53ae01c7.js  baefecb2.50709505.js  c2a8c85b.6f0596e1.js  c36fca92.44554e95.js  d2632918.42e1f6dc.js  d2632918.f6e056a4.js  (+11 more)
contributing/: adding-a-pack.html  adding-a-platform.html
packs/architecture/: dependency-injection.html  design-patterns.html  solid.html
packs/framework/: fastapi.html  mockito.html  nextjs.html  spring.html
packs/language/: go.html  java.html  kotlin.html  python.html  typescript.html
packs/process/: pre-commit.html
packs/quality/: code-quality.html  documentation-standards.html  error-handling.html  refactoring.html  security.html  testcontainers.html  testing-strategy.html  type-safety.html
packs/workflow/: atomic-commit.html  tdd.html
scripts/: gen-pack-docs.py
tests/: test_cli.py  test_config.py  test_exceptions.py  test_generator.py  test_loader.py  test_packs.py
tests/adapters/: conftest.py  test_base.py  test_claude.py  test_copilot.py  test_cursor.py  test_gemini.py  test_opencode.py
tests/integration/: test_generate.py
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/docs/: ci-integration.md  configuration.md  installation.md  intro.md  platforms.md  quick-start.md  upgrade.md
(+156 files in other folders)
