[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argus-standards"
version = "0.1.0"
description = "AI Agent Engineering Standards Layer"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.scripts]
argus = "argus.cli:main"

[project.entry_points."argus.adapters"]
claude = "argus.adapters.claude:ClaudeAdapter"
opencode = "argus.adapters.opencode:OpenCodeAdapter"
copilot = "argus.adapters.copilot:CopilotAdapter"
cursor = "argus.adapters.cursor:CursorAdapter"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["argus"]
