[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argus-standards"
version = "0.1.1"
description = "AI Agent Engineering Standards Layer"
authors = [{name = "Peter Murasky Jr", email = "peter.murasky@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "ruff>=0.4",
    "pytest-cov>=4.0",
    "types-PyYAML>=6.0",
    "commitizen>=3.0",
]

[project.urls]
Homepage = "https://github.com/pmurasky/argus"
Repository = "https://github.com/pmurasky/argus"
Issues = "https://github.com/pmurasky/argus/issues"

[project.scripts]
argus = "argus.cli:main"

[project.entry-points."argus.adapters"]
claude = "argus.adapters.claude:ClaudeAdapter"
opencode = "argus.adapters.opencode:OpenCodeAdapter"
copilot = "argus.adapters.copilot:CopilotAdapter"
cursor = "argus.adapters.cursor:CursorAdapter"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=argus --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["argus"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.commitizen]
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_incremental = true

[tool.coverage.run]
source = ["argus"]

[tool.coverage.report]
fail_under = 80
show_missing = true
